# toy-quant

./: Cargo.toml  README.md
examples/: bell.rs
src/: complex.rs  lib.rs  matrix.rs  qubit.rs
src/gates/: binary.rs  mod.rs  unitary.rs
src/registers/: classical.rs  quantum.rs
