[package]
name = "toy_quant"
version = "0.1.0"
authors = ["Nixon <nixon.emoony@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = {version = "0.7.3",features = ["small_rng"]}
num-traits="0.2.11"
nalgebra = "0.18"
approx="0.3.2"
typenum="1.11.2"
[profile.release]
lto = "fat"
codegen-units = 1
